updated page on CH and fixed missing quote in favicon URI

--- a/academia/ch.html
+++ b/academia/ch.html
@@ -1,5 +1,184 @@
-https://en.wikipedia.org/wiki/Christ's_Hospital
+<!--                                                                              
+                     _   _          _            _     _                           
+                    | | | |        | |          | |   (_)                          
+ ___  __ _ _ __ ___ | |_| |__   ___| |_ ___  ___| |__  _  ___   
+/ __|/ _` | '_ ` _ \| __| '_ \ / _ \ __/ _ \/ __| '_ \| |/ _ \ 
+\__ \ (_| | | | | | | |_| | | |  __/ ||  __/ (__| | | | |  __/
+|___/\__,_|_| |_| |_|\__|_| |_|\___|\__\___|\___|_| |_|_|\___|
+HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
+-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
 
-https://en.wikipedia.org/wiki/Worshipful_Company_of_Carmen
+  <link rel="icon" href="../assets/icons/favicon.ico" />
+  <title>Samuel Carlisle BEng (hons) Dunelm MIET</title>
+  <meta name="description" content="A portfolio of the projects I have worked on and their impact, the services I provide, the skills that I have and some of my writings.">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  1311
+  <link rel="stylesheet" href="../css/layout.css">
+  <link rel="stylesheet" href="../css/typography.css">
+  <link rel="stylesheet" href="../css/utilities.css">
 
-https://en.wikipedia.org/wiki/Livery_company#Precedence
+  <script defer src="../js/script.js"></script>
+</head>
+<body>
+  <!-- NAVBAR -->
+  <div class="navbar">
+    <a class="nav-title-link" href="../index.html">
+      <span class="nav-title">Samuel Carlisle BEng (hons) Dunelm MIET</span>
+    </a>
+      <span class="nav-title" title="menu" onclick="openNav()" class="button">≡</span>
+  </div>
+
+  <!-- The overlay -->
+  <div id="myNav" class="overlay">
+    <!-- Button to close the overlay navigation -->
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <!-- Overlay content -->
+    <div class="overlay-content">
+      <p>Home:</p>
+      <hr>
+      <a href="../index.html">> Home</a>
+      <a href="../home/bio.html">> Bio</a>
+      <a href="../home/contact.html">> Contact</a>
+      <p>Portfolio > Projects:</p>
+      <hr>
+      <a href="../projects/reprap.html">> Reprap Opensource 3D Printer</a>
+      <a href="../projects/animachine.html">> Animachine @Youin3D, Berlin</a>
+      <a href="../projects/buildingbanter.html">> Industrial Energy Monitoring</a>
+      <a href="../projects/classic4.html">> Medical Device Firmware</a>
+      <a href="../projects/nanode.html">> Nanode, DIY IoT Device</a>
+      <a href="../projects/ltfhc.html">> Electronic Medical Records</a>
+      <a href="../projects/thinkfarm.html">> Sustainability Research</a>
+      <a href="../projects/ose.html">> Open Source Ecology</a>
+      <p>Portfolio > Actions:</p>
+      <hr>
+      <a href="../actions/ucloccupation.html">> UCL Occupation</a>
+      <a href="../actions/occupylondon.html">> Occupy London Tech Team</a>
+      <a href="../actions/cryptoparty.html">> Cryptoparty London</a>
+      <a href="../actions/hurricanesandy.html">> Hurricane Hackers</a>
+      <a href="../actions/fliehkraft.html">> Fliehkraft, Berlin</a>
+      <a href="../actions/ecovillage.html">> Eco Village</a>
+      <p>Portfolio > Academia:</p>
+      <hr>
+      <a href="../academia/ch.html">> Secondary: Christ's Hospital</a>
+      <a href="../academia/durham.html">> Uni: Durham</a>
+      <a href="../academia/mit.html">> MIT Graduate App and Collab</a>
+      <p>Portfolio > Creative:</p>
+      <hr>
+      <a href="../art/writing.html">> Writing</a>
+      <a href="../art/artwork.html">> Artwork</a>
+      <a href="../art/concepts.html">> Concepts & Design</a>
+      <p>Portfolio > Talks:</p>
+      <hr>
+      <a href="../talks/ccc.html">> Assembly + Lightning Talk @CCC</a>
+      <a href="../talks/pp_intl.html">> RW Society @PP Intl</a>
+      <a href="../talks/fabrica.html">> Trust but Verify @Fabrica</a>
+      <a href="../talks/frontline.html">> Revolutionary Apps @Frontline Club</a>
+      <a href="../talks/talklist.html">> List: Talks</a>
+      <p>Lists of things I like:</p>
+      <hr>
+      <a href="../art/poetrylist.html">> Poetry</a>
+      <a href="../art/filmlist.html">> Film</a>
+      <a href="../art/booklist.html">> Books</a>
+      <a href="../art/musiclist.html">> Music</a>
+      <p>Service > Consulting</p>
+      <hr>
+      <a href="../service/engineering.html">> IT / Engineering</a>
+      <a href="../service/security.html">> Security</a>
+      <a href="../service/sustainability.html">> Sustainability</a>
+      <p>Service > Programming:</p>
+      <hr>
+      <a href="../service/programming.html">> Examples of My Work</a>
+      <p>Service > Webdev:</p>
+      <hr>
+      <a href="../service/web.html">> Webdesign and Development</a>
+      <a href="../service/web_examples.html">> Examples of My Work</a>
+      <a href="../service/web_feedback.html">> Client Feedback</a>
+      <p>Service > PC Repair</p>
+      <hr>
+      <a href="../service/onsite_repair.html">> Onsite Support</a>
+      <a href="../service/remote_repair.html">> Remote Support</a>
+      <a href="../service/repair_feedback.html">> Reviews</a>
+      <p>Service > Clients:</p>
+      <hr>
+      <a href="../service/current_clients.html">> Current Clients</a>
+      <a href="../service/previous_clients.html">> Previous Clients</a>
+      <p>Service > Personal:</p>
+      <hr>
+      <a href="../service/mentoring.html">> Mentoring</a>
+      <a href="../service/business_development.html">> Business Development</a>
+    </div>
+  </div>
+  <!-- Use any element to open/show the overlay navigation menu -->
+  <span onclick="openNav()">open</span>
+  <!-- MAIN PAGE CONTENT -->
+  <div id="main-content">
+
+    <!-- PROJECT HEADER -->
+    <div id="project-header">
+
+      <div class="main-title">Secondary Education</div>
+      <div class="body-text">
+Secondary education at a boarding school: <a href="https://en.wikipedia.org/wiki/Christ's_Hospital" target="_blank">Christ's Hospital</a> (Independant / Public School). Scholarship / Presentee of: <a href="https://en.wikipedia.org/wiki/Worshipful_Company_of_Carmen" target="_blank">The Worshipful Company of Carmen</a>
+
+</div>
+      <image class="project-header-image" src="../assets/images/Thanks_CH.jpg">
+      </div>
+
+
+      <div id="project-details">
+        <div class="subheader-text">Project Details / Background</div>
+        <div class="project-details-content">
+          <div class="body-text">As I reflect on my time at Christ's Hospital, a renowned boarding school nestled in the heart of West Sussex in the United Kingdom, a wave of nostalgia and positve memories wash over me. The years I spent within its historic walls were some of the most formative and enjoyable of my life.
+<br><br>
+One of the highlights of my time at Christ's Hospital was my involvement in sports. I developed a deep passion for rugby, spending countless hours on the field honing my skills, learning teamwork, and competing with my fellow students. The camaraderie and sense of belonging that came from being a part of a sports team was unparalleled, and I cherished every moment of it. Towards the end of my time at the school I was on the 2nd XV team and I was event able to represent the school in away matches on the 1st XV team a few times! Fantastic!
+<br><br>
+Another sport that captivated me was fives, a game similar to squash but with its own unique rules and techniques. I relished the fast-paced nature of the game, the strategic moves, and the adrenaline rush that came with each rally. It was a sport that required skill, dexterity, agility, and mental focus, and I was proud to represent my school in fives competitions and I kept playing fives when I went to join the fives team at university.
+<br><br>
+Academically, Christ's Hospital pushed me to reach my full potential. I was determined to excel, and my hard work paid off as at the age of 16 I was ranked in the top 10 of my year for the highest GCSE results in the school. The rigorous curriculum, expert teachers, and stimulating discussions in the classroom challenged me to think critically, broaden my horizons, and develop a thirst for knowledge, especially languages and sciences, that continues to drive me to this day.
+<br><br>
+The success I enjoyed at GCSE level paved the way for my A-levels, where I continued to excel focusing on: Maths, Further Maths, Physics, Chemistry, and English. The support and guidance of my teachers, as well as the nurturing environment of Christ's Hospital, empowered me to achieve excellent grades and lay the foundation for my future academic endeavors.
+<br><br>
+With my stellar academic performance, I was accepted into Durham University to study General Engineering. The solid foundation and strong work ethic instilled in me at Christ's Hospital set me up for success in higher education and beyond and I was so well prepared for university that I received early praise from my tutor at college, in the first term, for being one of the brightest pupils in the tutorial group.
+<br><br>
+But beyond academics and sports, Christ's Hospital provided me with a sense of community and also lifelong friendships. The bonds forged with fellow students from diverse backgrounds, who shared similar passions and aspirations, were invaluable. The boarding experience fostered independence, resilience, and adaptability, as I learned to navigate the challenges of living away from home and building a support system among my peers.
+<br><br>
+In conclusion, my experiences at Christ's Hospital were nothing short of extraordinary. From the thrill of playing rugby and fives and going on expeditions, camps and exercises all over the country with the Duke of Edinburgh award scheme and the Cadets (CCF), to achieving academic excellence, to forming lasting friendships, the school shaped me into the person I am today. I will forever cherish the memories of my time there, and I am grateful for the opportunities and education it provided me, which have laid the foundation for a successful future.</div>
+        </div>
+      </div>
+
+      <!-- IMAGE GALLERY -->
+      <div id="project-gallery">
+        <!-- TODO - Change the 'subheader-text' to whatever you want the Gallery section header to say -->
+        <div class="subheader-text">Image Gallery</div>
+        <div class="project-gallery-content">
+
+          <div class="gallery-image-container half-width">
+            <img loading="lazy" src="../assets/images/Thorton_CH.jpg" class="gallery-image">
+            <span class="image-caption">My beloved boarding house and home for most of my time at the School: Thornton</span>
+          </div>
+          <div class="gallery-image-container half-width">
+            <img loading="lazy" src="../assets/images/Avenue_CH.jpg" class="gallery-image">
+            <span class="image-caption">A view down the avenue at the school.</span>
+          </div>
+          <div class="gallery-image-container">
+            <img loading="lazy" src="../assets/images/Banner_CH.jpg" class="gallery-image">
+            <span class="image-caption">Grecian's tradition: a prank on campus: Banner Drop in the main quad</span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- FOOTER -->
+    <div id="footer">
+
+      <a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
+        <image src="../assets/icons/mail.svg" class="footer-icon"/>
+      </a>
+    </div>
+
+  </body>
+  </html>
