--- a/actions/ecovillage.html
+++ b/actions/ecovillage.html
@@ -11,7 +11,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <link rel="icon" href=../assets/icons/favicon.ico" />
+  <link rel="icon" href="../assets/icons/favicon.ico" />
   <title>Samuel Carlisle BEng (hons) Dunelm MIET</title>
   <meta name="description" content="A portfolio of the projects I have worked on and their impact, the services I provide, the skills that I have and some of my writings.">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -59,9 +59,9 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
       <a href="../actions/ecovillage.html">> Eco Village</a>
       <p>Portfolio > Academia:</p>
       <hr>
-      <a href="../academia/ch.html">> Overview</a>
-      <a href="../academia/durham.html">> About</a>
-      <a href="../academia/mit.html">> Curriculum Vitae</a>
+      <a href="../academia/ch.html">> Secondary: Christ's Hospital</a>
+      <a href="../academia/durham.html">> Uni: Durham</a>
+      <a href="../academia/mit.html">> MIT Graduate App and Collab</a>
       <p>Portfolio > Creative:</p>
       <hr>
       <a href="../art/writing.html">> Writing</a>
