--- a/projects/ose.html
+++ b/projects/ose.html
@@ -24,7 +24,8 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
   <!-- NAVBAR -->
   <div class="navbar">
     <a class="nav-title-link" href="../index.html">
-      <span class="nav-title">Samuel Carlisle BEng (hons) Dunelm MIET</span><span class="nav-title" title="menu" onclick="openNav()" class="button">≡</span>
+      <span class="nav-title">Samuel Carlisle BEng (hons) Dunelm MIET</span>
+      <span class="nav-title" title="menu" onclick="openNav()" class="button">≡</span>
     </a>
   </div>
   <!-- The overlay -->
@@ -58,9 +59,9 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
       <a href="../actions/ecovillage.html">> Eco Village</a>
       <p>Portfolio > Academia:</p>
       <hr>
-      <a href="../academia/ch.html">> Overview</a>
-      <a href="../academia/durham.html">> About</a>
-      <a href="../academia/mit.html">> Curriculum Vitae</a>
+      <a href="../academia/ch.html">> Secondary: Christ's Hospital</a>
+      <a href="../academia/durham.html">> Uni: Durham</a>
+      <a href="../academia/mit.html">> MIT Graduate App and Collab</a>
       <p>Portfolio > Creative:</p>
       <hr>
       <a href="../art/writing.html">> Writing</a>
