--- a/projects/classic4.html
+++ b/projects/classic4.html
@@ -63,9 +63,9 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
       <a href="../actions/ecovillage.html">> Eco Village</a>
       <p>Portfolio > Academia:</p>
       <hr>
-      <a href="../academia/ch.html">> Overview</a>
-      <a href="../academia/durham.html">> About</a>
-      <a href="../academia/mit.html">> Curriculum Vitae</a>
+      <a href="../academia/ch.html">> Secondary: Christ's Hospital</a>
+      <a href="../academia/durham.html">> Uni: Durham</a>
+      <a href="../academia/mit.html">> MIT Graduate App and Collab</a>
       <p>Portfolio > Creative:</p>
       <hr>
       <a href="../art/writing.html">> Writing</a>
